# fastapi_zero

./: pyproject.toml
fastapi_zero/: app.py
migrations/: env.py
migrations/versions/: 721317012eed_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
